--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ android {
         config {
             keyAlias 'mykeystore'
             keyPassword 'satelindo'
-            storeFile file('C:/Users/rened/Documents/OneDrive/Dokumente/Projects/Rene Dueber Keystore.jks')
+            storeFile file('/home/rene/Dokumente/Projects/MyArrowClient/Rene Dueber Keystore.jks')
             storePassword 'satelindo'
         }
     }
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.example.rene.myarrow"
         minSdkVersion 24
@@ -67,6 +67,7 @@ dependencies {
     compile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.google.android.gms:play-services-maps:9.8.0'
+    compile 'com.android.support:multidex:1.0.0'
     compile files('libs/mail.jar')
     compile files('libs/httpclient-4.5.2.jar')
     compile files('libs/additionnal.jar')
